# openglSketching

./: .gitignore  CMakeLists.txt  README.md  opengl.kdev4
.kdev4/: opengl.kdev4
libs/glew-2.1.0/lib/: libGLEW.so.2.1.0
libs/glfw-3.3.7/: glfw-3.3.7.kdev4
res/shaders/fragment/: LightSource.shader  LightableObject.shader  redColoredBackground.shader
res/shaders/vertex/: LightSource.shader  LightableObject.shader  basicPosition.shader
src/: Camera.cpp  Camera.h  ImagedTexture.cpp  ImagedTexture.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VertexLayout.cpp  VertexLayout.h  fileReader.cpp  fileReader.h  main.cpp
src/scences/: BlockProgram.cpp  BlockProgram.h  LightSource.cpp  LightSource.h  Program.h  RotatingMikasa.cpp  RotatingMikasa.h
